--- a/src/data/descriptions/0.md
+++ b/src/data/descriptions/0.md
@@ -1,1 +1,4 @@
+---
+title: Out-of-School Time
+---
 Programs provided by the [Office of Children and Families](https://www.phila.gov/programs/out-of-school-time-ost/) that help to connect families with after-school, weekend, and summer programs for youth in grades pre-K through 12. Residents can search for programs using the City’s [Out-of-School Time Program Locator](https://www.phila.gov/ost/program-locator/#/).
