--- a/src/data/descriptions/1.md
+++ b/src/data/descriptions/1.md
@@ -1,23 +1,26 @@
-This includes $3.1M in funding for the Office of Reentry Partnerships, a City office that works with various governmental, academic, and community-based organizations to coordinate citywide reentry efforts and provide connections to resources for returning citizens. 
+---
+title: Reentry and Juvenile Justice Services
+---
+This includes $3.1M in funding for the [Office of Reentry Partnerships](https://www.phila.gov/departments/office-of-reentry-partnerships/), a City office that works with various governmental, academic, and community-based organizations to coordinate citywide reentry efforts and provide connections to resources for returning citizens. 
 
-This also includes support for a number of programs in the budget for the Department of Human Services. The programs focus on providing preventative services with resources primarily aimed at youth who have interacted with the criminal justice system. The funded programs are: 
+This also includes support for a number of programs in the budget for the Department of Human Services. The programs focus on providing preventative services with resources primarily aimed at youth who have interacted with the criminal justice and child welfare systems. The funded programs are:  
 
-- Truancy Intervention and Prevention Services: $7.8M ([link](https://www.phila.gov/programs/truancy-intervention-and-prevention-services-tips/));
-- E3 Power Centers: $2M ([link](https://www.jevshumanservices.org/program/e3-power-center-city/));
-- The First Judicial District Juvenile Court: $1.7M ([link](https://www.courts.phila.gov/common-pleas/family/juvenile/));
-- Day Treatment: $1.3M ([link]());
-- The Bridge at the Therapeutic Center at Fox Chase: $1M ([link](https://philadelphia.pa.networkofcare.org/mh/services/agency.aspx?pid=THEBRIDGEATTHERAPEUTICCENTERFOXCHASEemclasscbhPhillyCBHem_209_2_0));
-- The Institute for the Development of African-American Youth:  $720k ([link](https://idaay.org/));
-- Diversified Community Services: $712k ([link](http://www.dcsphila.org/));
-- The Juvenile Justice Center: $712k ([link](https://juvenilejustice.org/));
-- Norris Square Community: $712k ([link](https://www.nscaphila.org/who-we-are/));
-- Urban Affairs Coalition: $712k ([link](https://uac.org/about/frequently-asked-questions/#12));
-- Mural Arts Advocates: $700k ([link](https://www.muralarts.org/about/board-of-directors/));
-- GPS Monitors: $600k ([link]());
-- CORA Community Mediation Support: $440k ([link](https://www.coraservices.org/));
-- DOA: $245k ([link]());
-- Youth Aid Panels: $245k ([link](https://www.phila.gov/districtattorney/resources/Pages/YouthAidPanelProgram.aspx));
-- Good Shepherd Life Skills: $92.5k ([link](https://www.phillymediators.org/));
-- Juvenile Justice Center Restitution: $50k ([link](https://juvenilejustice.org/));
-- Northeast Treatment Centers Restitution: $50k ([link](http://netcenters.org/)), and;
-- Youth Advocacy Program Restitution: $50k ([link](https://www.yapinc.org/)).
+- [Truancy Intervention and Prevention Services](https://www.phila.gov/programs/truancy-intervention-and-prevention-services-tips/): $7.8M;
+- [E3 Power Centers](https://www.jevshumanservices.org/program/e3-power-center-city/): $2M;
+- [The First Judicial District Juvenile Court](https://www.courts.phila.gov/common-pleas/family/juvenile/): $1.7M;
+- Day Treatment: $1.3M;
+- [The Bridge at the Therapeutic Center at Fox Chase](https://philadelphia.pa.networkofcare.org/mh/services/agency.aspx?pid=THEBRIDGEATTHERAPEUTICCENTERFOXCHASEemclasscbhPhillyCBHem_209_2_0): $1M;
+- [The Institute for the Development of African-American Youth](https://idaay.org/): $720k;
+- [Diversified Community Services](http://www.dcsphila.org/): $712k;
+- [The Juvenile Justice Center](https://juvenilejustice.org/): $712k;
+- [Norris Square Community](https://www.nscaphila.org/who-we-are/): $712k;
+- [Urban Affairs Coalition](https://uac.org/about/frequently-asked-questions/#12): $712k;
+- [Mural Arts Advocates](https://www.muralarts.org/about/board-of-directors/): $700k;
+- GPS Monitors: $600k;
+- [CORA Community Mediation Support](https://www.coraservices.org/): $440k;
+- DOA: $245k;
+- [Youth Aid Panels](https://www.phila.gov/districtattorney/resources/Pages/YouthAidPanelProgram.aspx): $245k;
+- [Good Shepherd Life Skills](https://www.phillymediators.org/): $92.5k;
+- [Juvenile Justice Center Restitution](https://juvenilejustice.org/): $50k;
+- [Northeast Treatment Centers Restitution](http://netcenters.org/): $50k, and;
+- [Youth Advocacy Program Restitution](https://www.yapinc.org/): $50k.
