updates with diagonal striping and lang changes

--- a/src/data/descriptions/2.md
+++ b/src/data/descriptions/2.md
@@ -1,4 +1,4 @@
 ---
-title: Anti-Violence Community Partnership Grants
+title: Anti-Violence Community Expansion Grants
 ---
-Funding for grants to community-based organizations performing gun violence prevention and intervention. The newly created [Violence Prevention and Opportunity Monitoring Group](https://phlcouncil.com/city-council-mayor-unveil-process-for-grants-for-community-violence-prevention-programs/), with members appointed by both City Council and the Mayor, will provide guidance and support to organizations receiving funding. Details surrounding the process for awarding contracts to community organizations are still being finalized, and the process is expected to begin in early August.
+According to the [program application](https://www.phila.gov/documents/anti-violence-community-expansion-grant-program-application/), these grants, which have not yet been awarded, will “focus on supporting mid-size organizations with a proven track-record working in neighborhoods vulnerable to gun violence” and must be used for projects occurring between fall 2021 and summer 2022. The newly created [Violence Prevention and Opportunity Monitoring Group](https://phlcouncil.com/city-council-mayor-unveil-process-for-grants-for-community-violence-prevention-programs/), with members appointed by both City Council and the Mayor, will provide guidance and support to organizations receiving funding. For the purpose of this analysis, these grants are classified as intervention, although there is a risk that the funding will be used to support longer-term preventive intitatives instead. 
