--- a/src/data/descriptions/6.md
+++ b/src/data/descriptions/6.md
@@ -1,4 +1,4 @@
 ---
 title: Behavioral Health Mobile Crisis Team and Hotline
 ---
-This funding provides an additional option for people calling 911 about a behavioral health crisis by expanding capacity for the City’s behavioral health crisis hotline and mobile teams.
+This funding will provide increased behavioral health support for people calling 911. The funding will expand the Philadelphia Crisis Line and mobile crisis teams and connect them to the 911 process. The Philadelphia Crisis Line is a telephone hotline that provides mental health crisis intervention and can deploy mental health professionals, known as mobile crisis teams, to stabilize individuals during crises.
