--- a/src/data/descriptions/9.md
+++ b/src/data/descriptions/9.md
@@ -1,4 +1,4 @@
 ---
 title: 911 Triage and Co-Responder
 ---
-Funding to provide joint police-behavioral health responses to 911 calls and better identify when people are calling 911 due to a mental health crisis.
+This funding redesigns how police respond to behavioral health crises, supporting improvements to the 911 call triage infrastructure and piloting co-responder teams to respond to calls related to behavioral health. The co-responder teams include a Crisis Intervention Team police officer paired with a behavioral health professional.  
