--- a/src/data/descriptions/8.md
+++ b/src/data/descriptions/8.md
@@ -1,4 +1,4 @@
 ---
 title: Community Life Improvement Program
 ---
-The budget for the Community Life Improvement Program (CLIP) in the Managing Director’s Office. The program is focused on improving neighborhoods by eradicating blight by removing graffiti, cleaning vacant lots, organizing neighborhood cleanups, and providing community service opportunities for non-violent offenders. For more information, see the [City website](https://www.phila.gov/departments/community-life-improvement-program/).
+The budget for the Community Life Improvement Program (CLIP) in the Managing Director’s Office. The program is focused on improving neighborhoods by eradicating blight by removing graffiti, cleaning vacant lots, organizing neighborhood cleanups, and providing paid community service opportunities for non-violent offenders. For more information, see the [City website](https://www.phila.gov/departments/community-life-improvement-program/).
