update for release version

--- a/src/data/descriptions/1.md
+++ b/src/data/descriptions/1.md
@@ -18,7 +18,7 @@ This also includes support for a number of programs in the budget for the Depart
 - [Mural Arts Advocates](https://www.muralarts.org/about/board-of-directors/): $700k;
 - GPS Monitors: $600k;
 - [CORA Community Mediation Support](https://www.coraservices.org/): $440k;
-- DOA: $245k;
+<!-- - DOA: $245k; -->
 - [Youth Aid Panels](https://www.phila.gov/districtattorney/resources/Pages/YouthAidPanelProgram.aspx): $245k;
 - [Good Shepherd Life Skills](https://www.phillymediators.org/): $92.5k;
 - [Juvenile Justice Center Restitution](https://juvenilejustice.org/): $50k;
