--- a/src/data/descriptions/23.md
+++ b/src/data/descriptions/23.md
@@ -1,4 +1,4 @@
 ---
 title: Targeted Community Investment Grants
 ---
-Funding to support between 20 and 100 new community-led violence prevention projects, as part of the City’s [Targeted Community Investment Grants](https://www.phila.gov/2021-05-26-city-launches-new-round-of-violence-prevention-grants-for-community-based-organizations-2/) program. The program has already awarded nearly $2 million to more than 100 community organizations with grants ranging from $500 to $20,000.
+Funding to support between 20 and 100 new community-led violence prevention projects, as part of the City’s [Targeted Community Investment Grant](https://www.phila.gov/2021-05-26-city-launches-new-round-of-violence-prevention-grants-for-community-based-organizations-2/) program. The program has already awarded nearly $2 million to more than 100 community organizations with grants ranging from $500 to $20,000.
