--- a/src/data/descriptions/12.md
+++ b/src/data/descriptions/12.md
@@ -1,9 +1,9 @@
 ---
 title: Free Library Budget Increase
 ---
-The budget increase for the [Free Library](https://www.freelibrary.org/), which restores most, but not all, of the pandemic-related budget cut in FY21. Despite this increase, the department’s budget is still $3.1M (7%) below its pre-pandemic budget level. 
+The budget increase for the [Free Library](https://www.freelibrary.org/), which restores most, but not all, of the pandemic-related budget cut in FY21. Despite this increase, the department’s budget is still $3.0M (6.5%) below its pre-pandemic budget level. 
 
-The added funding is not targeted to specific anti-violence programs or neighbhorhoods most impacted by gun violence. Instead, it funds a number of items in the department’s budget:
+The added funding is not targeted to specific anti-violence programs or neighborhoods most impacted by gun violence. Instead, it funds a number of items in the department’s budget:
 
 - Restoration of 5-day service: $1.9M, and; 
 - [The LEAP After School Program](https://libwww.freelibrary.org/programs/leap/): $600k.
