--- a/src/data/descriptions/2.md
+++ b/src/data/descriptions/2.md
@@ -1,4 +1,4 @@
 ---
 title: Anti-Violence Community Expansion Grants
 ---
-According to the [program application](https://www.phila.gov/documents/anti-violence-community-expansion-grant-program-application/), these grants, which have not yet been awarded, will “focus on supporting mid-size organizations with a proven track-record working in neighborhoods vulnerable to gun violence” and must be used for projects occurring between fall 2021 and summer 2022. The newly created [Violence Prevention and Opportunity Monitoring Group](https://phlcouncil.com/city-council-mayor-unveil-process-for-grants-for-community-violence-prevention-programs/), with members appointed by both City Council and the Mayor, will provide guidance and support to organizations receiving funding. For the purpose of this analysis, these grants are classified as intervention, although there is a risk that the funding will be used to support longer-term preventive intitatives instead. 
+According to the [program application](https://www.phila.gov/documents/anti-violence-community-expansion-grant-program-application/) these grants, which have not yet been awarded, will focus on supporting mid-size organizations working in neighborhoods impacted by gun violence and must be used for projects occurring between fall 2021 and summer 2022. The newly created [Violence Prevention and Opportunity Monitoring Group](https://www.phila.gov/2021-08-06-apply-for-the-anti-violence-community-expansion-grant-program/), with members appointed by both City Council and the Mayor, will provide guidance and support to organizations receiving funding. For the purpose of this analysis, these grants are classified as intervention, although it is possible that the funding will be used to support longer-term preventive initiatives as well. 
