update commerce desc

--- a/src/data/descriptions/10.md
+++ b/src/data/descriptions/10.md
@@ -1,4 +1,4 @@
 ---
 title: Additional Support for the Commerce Department
 ---
-As part of budget negotiations with the Mayor, City Council added funding for the [Commerce Department](https://www.phila.gov/departments/department-of-commerce/). This funding includes increased support for the hospitality industry ($3M), the [Taking Care of Business Clean Corridors](https://www.phila.gov/programs/phl-taking-care-of-business/) program ($1.7M), and community economic development support ($600k).
+As part of budget negotiations with the Mayor, City Council added funding for the [Commerce Department](https://www.phila.gov/departments/department-of-commerce/) to provide increased community economic development support.
